--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="/images/favicon.svg" />
     <link type="text/css" rel="stylesheet" href="dist/style.css" />
-    <title>Boilerplate</title>
+    <title>React Weather</title>
   </head>
 
   <body>
